Fix layout grid on mobile

--- a/src/components/codeBlock/codeBlock.less
+++ b/src/components/codeBlock/codeBlock.less
@@ -9,16 +9,22 @@
   }
 
   &__example {
-    width: 70%;
+    
+    @media @laptop-small-min {
+      width: 70%;
+    }
   }
 
   &__description {
     padding: 1rem 0;
     margin: 2rem 0 1rem 0;
     padding-left: 2rem;
-    width: 70%;
     font-size: 1.1rem;
     #border.solid(left, 8px, @color[primary]);
+
+    @media @laptop-small-min {
+      width: 70%;
+    }
 
     pre {
       border-radius: @settings[radius];
